--- a/secciones/productos/productos.css
+++ b/secciones/productos/productos.css
@@ -145,7 +145,7 @@ header {
   color: whitesmoke;
   padding: 15px 10px;
   cursor: pointer;
-  width: 10vw;
+  width: 100px;
   font-family: "century gothic", sans-serif;
   transition: all 0.4s ease;
 
