--- a/secciones/productos/productos.css
+++ b/secciones/productos/productos.css
@@ -171,6 +171,122 @@ header {
   font-family: "century gothic", sans-serif;  
 }
 
+
+
+/* FOOTER */
+
+footer {  
+  background-color: #ad0606;
+}
+.footer-caja{
+display: flex;    
+flex-direction: row-reverse;
+justify-content: space-around;
+}
+
+.foot-container{
+  display: flex;     
+  flex-direction: row-reverse;
+  justify-content: space-evenly;
+}
+.foot{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.foot2{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+footer h3 {
+  margin: 20px;  
+  margin-bottom: 10px;  
+  font-family: "Century gothic", sans-serif;
+  font-size: 15px;
+  color: antiquewhite;
+  font-weight: lighter;
+}
+
+.foot p {
+  margin: 20px;
+  margin-bottom: 100px;
+}
+.foot2 p {
+  margin: 20px;
+  margin-bottom: 5px;
+}
+  
+.foot-container a {
+  position: sticky;    
+  text-decoration: none;
+  color: rgb(154, 154, 170);
+  font-size: 11.5px;   
+  padding-bottom: 8px;
+  font-family: "Century Gothic", sans-serif;
+  font-weight: bold;
+}
+
+.foot-container a::after {
+  content: "";
+  position: absolute;
+  left: 15%;
+  bottom: 0px;
+  width: 70%;
+  height: 1px;
+  background-color: #ffffff;
+  transform: scaleX(0);
+  transform-origin: center;
+  transition: transform 0.5s ease;
+}
+.foot-container a:hover::after {
+  transform: scaleX(1);
+}
+.imagenfooter{
+width: 200px;
+
+}
+
+.redes{
+justify-content: center;
+display: flex;
+flex-direction: column;
+height: 100%;
+}
+.redes a {
+color: azure;
+position: unset;
+text-align: center;
+margin: 10px;  
+}
+.redes a i{
+font-size: 25px;
+animation: ;
+}
+
+
+
+.redesbutton{
+justify-content: center;
+display: flex;
+}
+
+
+.copy{
+display: flex;
+justify-content: center;
+flex-direction: column;
+background-color: rgb(143, 4, 4);
+}
+.copy p{
+text-align: center;
+margin: 5px;
+margin-top: 10px;
+color: white;
+font-family: 'Courier New', Courier, monospace;  
+font-size: 12px;
+}
+
 @media screen and (max-width: 1100px) {
   .container-items {
     grid-template-columns: repeat(
