--- a/style.css
+++ b/style.css
@@ -14,7 +14,8 @@ body{
 header{
     position: fixed;
     top: 0;
-    width: 100%;   
+    width: 100%; 
+    z-index: 2;  
 }
 
 /*/ PORTADA /*/
@@ -57,18 +58,92 @@ header{
   margin-bottom: 200px;
 }
 
-footer {
-    display: flex;
-    flex-direction: row-reverse;
-    background-color: rgb(173, 6, 6);
-  }
+
+
+.section2{
+  display: flex;
+  background-color: rgb(125, 153, 204);
+  height: 600px;
+  width: 100%;
+}
+
+.grupo2{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
   
-  .foot h3 {
+}
+
+.subtitulo{
+  text-align: center;
     margin: 20px;
-    margin-right: 250px;
-    font-family: "Lora", sans-serif;
+    color: rgb(255, 255, 255);
+    font-family: 'Lora', serif;
+    font-size: 35px;
+}
+
+.texto2{      
+    text-align: left;
+    font-family: 'Raleway', sans-serif;    
+    color: rgb(240, 230, 230);
+    padding: 20px;
+   font-size: 25px;
+   font-weight: bold;
+}
+
+.imagefloat {
+  width: 250%;
+  height: 100%;
+  overflow: hidden;
+  align-items: center;
+  display: flex; 
+  margin: 20px;
+  justify-content: center; 
+}
+
+#imagenflt {
+  width: 100%;
+  height: auto;
+  transition: opacity 1s;
+  border-radius: 150px;  
+}
+
+
+
+
+
+footer {  
+    background-color: #ad0606;
+  }
+.footer-caja{
+  display: flex;    
+  flex-direction: row-reverse;
+  justify-content: space-around;
+}
+
+  .foot-container{
+    display: flex;     
+    flex-direction: row-reverse;
+    justify-content: space-evenly;
+  }
+  .foot{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
+  .foot2{
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+  }
+  footer h3 {
+    margin: 20px;  
+    margin-bottom: 10px;  
+    font-family: "Century gothic", sans-serif;
     font-size: 15px;
     color: antiquewhite;
+    font-weight: lighter;
   }
   
   .foot p {
@@ -76,40 +151,80 @@ footer {
     margin-bottom: 100px;
   }
   .foot2 p {
-    margin: 1.2vw;
-  }
-  
-  .foot2 h3 {
     margin: 20px;
-    font-family: "Lora", sans-serif;
-    font-size: 15px;
-    color: antiquewhite;
+    margin-bottom: 5px;
   }
-  
-  footer a {
-    position: sticky;
+    
+.foot-container a {
+    position: sticky;    
     text-decoration: none;
     color: rgb(154, 154, 170);
-    font-size: 12px;   
+    font-size: 11.5px;   
     padding-bottom: 8px;
     font-family: "Century Gothic", sans-serif;
+    font-weight: bold;
   }
 
-  footer a::after {
+.foot-container a::after {
     content: "";
     position: absolute;
     left: 15%;
     bottom: 0px;
     width: 70%;
-    height: 2px;
+    height: 1px;
     background-color: #ffffff;
     transform: scaleX(0);
     transform-origin: center;
     transition: transform 0.5s ease;
 }
-footer a:hover::after {
+.foot-container a:hover::after {
     transform: scaleX(1);
 }
+.imagenfooter{
+  width: 200px;
+  
+}
+
+.redes{
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+.redes a {
+  color: azure;
+  position: unset;
+  text-align: center;
+  margin: 10px;  
+}
+.redes a i{
+  font-size: 25px;
+  animation: ;
+}
+
+
+
+.redesbutton{
+  justify-content: center;
+  display: flex;
+}
+
+
+.copy{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  background-color: rgb(143, 4, 4);
+}
+.copy p{
+  text-align: center;
+  margin: 5px;
+  margin-top: 10px;
+  color: white;
+  font-family: 'Courier New', Courier, monospace;  
+  font-size: 12px;
+}
+
 
 
 
@@ -129,4 +244,45 @@ footer a:hover::after {
     margin-top: 20px;
     margin-bottom: 100px;
   }
+
+  .section2{
+    flex-direction: column;
+    height: 830px;
+  }
+  .grupo2{
+    align-items: center;
+  }
+  .subtitulo{
+    text-align: center;
+  }
+  .texto2{
+    text-align: center;
+  }
+
+  footer {
+    flex-direction: column;
+    justify-content: center;
+  }
+.foot-container{
+  margin: 0;
+  justify-content: center;
+}
+ 
+.footer-image{
+ justify-content: center;
+ display: flex;
+}
+.imagenfooter{
+  margin: 0;
+  width: 150px;
+}
+  .imagefloat{
+    width: 90%;
+    justify-content: center;
+    align-content: center;
+    padding: 0;
+    /* margin-left: 45px; */
+    height: 50%;
+  }
+  
 }
