--- a/secciones/productos/productos.css
+++ b/secciones/productos/productos.css
@@ -6,7 +6,7 @@
   box-sizing: border-box;
 }
 body{
-  background-color: #bbcdda;
+ background-color: rgb(245, 222, 179);
 }
 header {
   position: fixed;
@@ -23,7 +23,7 @@ header {
   width: 300%;
   height: 180px;
   margin-left: -100%;
-  margin-top: 92px;   
+  margin-top: 6.5vw;   
 }
 .slider-container {
   overflow: hidden;
@@ -40,7 +40,7 @@ header {
   width: 2.5vw;
   height: 2.5vw;
   background: rgba(255, 255, 255, 0.295);
-  top: 180px;
+  top: 12vw;
   font-size: 2vw;
   font-weight: bold;
   font-family: monospace;
@@ -66,6 +66,15 @@ header {
 
 /* Estilos para la sección de la tienda */
 
+.Tienda{
+  margin-bottom: 50px;
+}
+
+.titulo-tienda {
+  padding: 50px 50px 50px 50px;
+  font-family: "century gothic", sans-serif;
+  font-size: 35px;  
+}
 
 .Tienda img {
   max-width: 250px;
@@ -89,7 +98,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #bbcdda
+  background-color: rgb(245, 222, 179);
 }
 
 .producto {
@@ -166,10 +175,7 @@ header {
 
 
 
-.titulo-tienda {
-  padding: 50px 50px 50px 50px;
-  font-family: "century gothic", sans-serif;  
-}
+
 
 
 
@@ -261,7 +267,7 @@ margin: 10px;
 }
 .redes a i{
 font-size: 25px;
-animation: ;
+
 }
 
 
@@ -297,6 +303,11 @@ font-size: 12px;
 }
 
 @media screen and (max-width: 700px) {
+.Tienda{
+  margin-top: -60px;
+}
+
+
   .container-items {
     grid-template-columns: repeat(
       1,
@@ -312,5 +323,37 @@ font-size: 12px;
   }
   .slider-img{
     height: 55%;
+  }
+
+
+  .footer-caja {
+    flex-direction: column;
+    justify-content: center;   
+  }
+
+  .foot-container{
+  margin: 0;
+  justify-content: center;
+  }
+ 
+.footer-image{
+ justify-content: center;
+ display: flex;
+}
+.redes{
+  justify-content: center;
+  text-align: center;
+}
+
+.imagenfooter{
+  margin: 0;
+  width: 150px;
+}
+  .imagefloat{
+    width: 90%;
+    justify-content: center;
+    align-content: center;
+    padding: 0;   
+    height: 50%;
   }
 }
