--- a/style.css
+++ b/style.css
@@ -199,7 +199,25 @@ footer {
 }
 .redes a i{
   font-size: 25px;
-  animation: ;
+}
+
+@keyframes girar {
+  0% {
+    transform: rotate(0deg);
+  }
+  80% {
+    transform: rotate(360deg);
+  }
+  90%{
+    transform: rotate(360deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.redes i {
+  animation: girar 3s infinite;
+  animation-play-state: running, paused;
 }
 
 
