--- a/secciones/nosotros/nosotros.css
+++ b/secciones/nosotros/nosotros.css
@@ -147,7 +147,24 @@ footer {
   animation: ;
   }
   
-  
+  @keyframes girar {
+    0% {
+      transform: rotate(0deg);
+    }
+    80% {
+      transform: rotate(360deg);
+    }
+    90%{
+      transform: rotate(360deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+  .redes i {
+    animation: girar 3s infinite;
+    animation-play-state: running, paused;
+  }
   
   .redesbutton{
   justify-content: center;
