--- a/secciones/productos/productos.css
+++ b/secciones/productos/productos.css
@@ -270,7 +270,24 @@ font-size: 25px;
 
 }
 
-
+@keyframes girar {
+  0% {
+    transform: rotate(0deg);
+  }
+  80% {
+    transform: rotate(360deg);
+  }
+  90%{
+    transform: rotate(360deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.redes i {
+  animation: girar 3s infinite;
+  animation-play-state: running, paused;
+}
 
 .redesbutton{
 justify-content: center;
