--- a/secciones/nosotros/nosotros.css
+++ b/secciones/nosotros/nosotros.css
@@ -11,11 +11,11 @@ header{
     width: 100%;
 }
 body{
-    background-color: rgb(245, 222, 179);
+    background-color: #eceec3;
 
 }
 #Nosotros h2{
-    color: rgb(37, 81, 163);
+    color: #FF8F8F;
     font-size: 50px;
     padding: 20px;
     margin: 10px;
@@ -48,7 +48,7 @@ body{
 
 .historia, .qs {
     padding: 15px;
-    background-color: rgba(6, 104, 252, 0.199);
+    background-color: #9ade7ba6;
     border-radius: 20px;
     margin-bottom: 20px;
     display: flex;
@@ -58,135 +58,134 @@ body{
 
 /* FOOTER */
 
+
 footer {  
-    background-color: #ad0606;
-  }
-  .footer-caja{
-  display: flex;    
+  background-color: #508D69;
+}
+.footer-caja{
+display: flex;    
+flex-direction: row-reverse;
+justify-content: space-around;
+}
+
+.foot-container{
+  display: flex;     
   flex-direction: row-reverse;
-  justify-content: space-around;
-  }
-  
-  .foot-container{
-    display: flex;     
-    flex-direction: row-reverse;
-    justify-content: space-evenly;
-  }
-  .foot{
+  justify-content: space-evenly;
+}
+.foot{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.foot2{
     display: flex;
     align-items: center;
     flex-direction: column;
-  }
-  .foot2{
-      display: flex;
-      align-items: center;
-      flex-direction: column;
-  }
-  footer h3 {
-    margin: 20px;  
-    margin-bottom: 10px;  
-    font-family: "Century gothic", sans-serif;
-    font-size: 15px;
-    color: antiquewhite;
-    font-weight: lighter;
-  }
-  
-  .foot p {
-    margin: 20px;
-    margin-bottom: 100px;
-  }
-  .foot2 p {
-    margin: 20px;
-    margin-bottom: 5px;
-  }
-    
-  .foot-container a {
-    position: sticky;    
-    text-decoration: none;
-    color: rgb(154, 154, 170);
-    font-size: 11.5px;   
-    padding-bottom: 8px;
-    font-family: "Century Gothic", sans-serif;
-    font-weight: bold;
-  }
-  
-  .foot-container a::after {
-    content: "";
-    position: absolute;
-    left: 15%;
-    bottom: 0px;
-    width: 70%;
-    height: 1px;
-    background-color: #ffffff;
-    transform: scaleX(0);
-    transform-origin: center;
-    transition: transform 0.5s ease;
-  }
-  .foot-container a:hover::after {
-    transform: scaleX(1);
-  }
-  .imagenfooter{
-  width: 200px;
-  
-  }
-  
-  .redes{
-  justify-content: center;
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  }
-  .redes a {
-  color: azure;
-  position: unset;
-  text-align: center;
-  margin: 10px;  
-  }
-  .redes a i{
-  font-size: 25px;
-  animation: ;
-  }
-  
-  @keyframes girar {
-    0% {
-      transform: rotate(0deg);
-    }
-    80% {
-      transform: rotate(360deg);
-    }
-    90%{
-      transform: rotate(360deg);
-    }
-    100% {
-      transform: rotate(360deg);
-    }
-  }
-  .redes i {
-    animation: girar 3s infinite;
-    animation-play-state: running, paused;
-  }
-  
-  .redesbutton{
-  justify-content: center;
-  display: flex;
-  }
-  
-  
-  .copy{
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  background-color: rgb(143, 4, 4);
-  }
-  .copy p{
-  text-align: center;
-  margin: 5px;
-  margin-top: 10px;
-  color: white;
-  font-family: 'Courier New', Courier, monospace;  
-  font-size: 12px;
-  }
+}
+footer h3 {
+  margin: 20px;  
+  margin-bottom: 10px;  
+  font-family: "Century gothic", sans-serif;
+  font-size: 15px;
+  color: antiquewhite;
+  font-weight: lighter;
+}
 
+.foot p {
+  margin: 20px;
+  margin-bottom: 100px;
+}
+.foot2 p {
+  margin: 20px;
+  margin-bottom: 5px;
+}
+  
+.foot-container a {
+  position: sticky;    
+  text-decoration: none;
+  color: rgb(154, 154, 170);
+  font-size: 11.5px;   
+  padding-bottom: 8px;
+  font-family: "Century Gothic", sans-serif;
+  font-weight: bold;
+}
+
+.foot-container a::after {
+  content: "";
+  position: absolute;
+  left: 15%;
+  bottom: 0px;
+  width: 70%;
+  height: 1px;
+  background-color: #ffffff;
+  transform: scaleX(0);
+  transform-origin: center;
+  transition: transform 0.5s ease;
+}
+.foot-container a:hover::after {
+  transform: scaleX(1);
+}
+.imagenfooter{
+width: 200px;
+
+}
+
+.redes{
+justify-content: center;
+display: flex;
+flex-direction: column;
+height: 100%;
+}
+.redes a {
+color: azure;
+position: unset;
+text-align: center;
+margin: 10px;  
+}
+.redes a i{
+font-size: 25px;
+}
+
+@keyframes girar {
+0% {
+  transform: rotate(0deg);
+}
+80% {
+  transform: rotate(360deg);
+}
+90%{
+  transform: rotate(360deg);
+}
+100% {
+  transform: rotate(360deg);
+}
+}
+.redes i {
+animation: girar 3s infinite;
+animation-play-state: running, paused;
+}
+
+.redesbutton{
+justify-content: center;
+display: flex;
+}
+
+
+.copy{
+display: flex;
+justify-content: center;
+flex-direction: column;
+background-color: #325e44;
+}
+.copy p{
+text-align: center;
+margin: 5px;
+margin-top: 10px;
+color: white;
+font-family: 'Courier New', Courier, monospace;  
+font-size: 12px;
+}
   @media screen and (max-width: 700px){
 
       #Nosotros{
