--- a/secciones/productos/productos.css
+++ b/secciones/productos/productos.css
@@ -6,7 +6,7 @@
   box-sizing: border-box;
 }
 body{
- background-color: rgb(245, 222, 179);
+ background-color: #EEF296;
 }
 header {
   position: fixed;
@@ -70,11 +70,14 @@ header {
   margin-bottom: 50px;
 }
 
-.titulo-tienda {
+.titulo-tienda{
+  color: #FF8F8F;
+  font-family: 'Righteous', serif;
+  font-size: 3em; 
   padding: 50px 50px 50px 50px;
   font-family: "century gothic", sans-serif;
-  font-size: 35px;  
-}
+  }
+  
 
 .Tienda img {
   max-width: 250px;
@@ -84,7 +87,9 @@ header {
 .container-items { 
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 20px;
+  gap: 5px;
+  margin-left: 16px;
+  margin-right: 16px;
 }
 
 .container-icon {
@@ -98,7 +103,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: rgb(245, 222, 179);
+  background-color: #EEF296;
 }
 
 .producto {
@@ -136,21 +141,19 @@ header {
   padding: 2vw;
 }
 
-.producto:hover img {
-  transform: scale(1.1); /* agranda la imagen cuando paso por arriba*/
-}
 
 .price {
   justify-content: center;
   font-size: 22px;
   font-weight: 1000;
+  color: #325e44;
 }
 
 .info-product button {
   border: none;
   border-radius: 50px;
   background: none;
-  background-color: black;
+  background-color: #508D69;
   color: whitesmoke;
   padding: 15px 10px;
   cursor: pointer;
@@ -181,8 +184,9 @@ header {
 
 /* FOOTER */
 
+
 footer {  
-  background-color: #ad0606;
+  background-color: #508D69;
 }
 .footer-caja{
 display: flex;    
@@ -267,26 +271,25 @@ margin: 10px;
 }
 .redes a i{
 font-size: 25px;
-
 }
 
 @keyframes girar {
-  0% {
-    transform: rotate(0deg);
-  }
-  80% {
-    transform: rotate(360deg);
-  }
-  90%{
-    transform: rotate(360deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
+0% {
+  transform: rotate(0deg);
+}
+80% {
+  transform: rotate(360deg);
+}
+90%{
+  transform: rotate(360deg);
+}
+100% {
+  transform: rotate(360deg);
+}
 }
 .redes i {
-  animation: girar 3s infinite;
-  animation-play-state: running, paused;
+animation: girar 3s infinite;
+animation-play-state: running, paused;
 }
 
 .redesbutton{
@@ -299,7 +302,7 @@ display: flex;
 display: flex;
 justify-content: center;
 flex-direction: column;
-background-color: rgb(143, 4, 4);
+background-color: #325e44;
 }
 .copy p{
 text-align: center;
@@ -333,7 +336,7 @@ font-size: 12px;
   }
 
   .slider {
-      margin-top: 17vw;     
+      margin-top: 15.1vw;     
   }
   .slider-btn{
     top: 135px;
