--- a/secciones/productos/productos.css
+++ b/secciones/productos/productos.css
@@ -91,11 +91,27 @@ header {
   margin-left: 16px;
   margin-right: 16px;
 }
-
-.container-icon {
+.container-icon{
+  position: relative;
+  display: inline-block;
+  padding-top: 10px;
+  margin-right: 30px;
+}
+.img-icon {
   width: 40px;
   height: 40px;
-  margin-right: 5vw;
+  margin-right: 1vw;
+}
+#contadorCarrito {
+  position: absolute;
+  top: 0;
+  right: 5%;
+  background-color: red;
+  color: white;
+  border-radius: 50%;
+  padding: 5px 8px;
+  font-size: 12px;
+  margin-bottom: 5px;
 }
 
 .header-tienda {
