--- a/secciones/productos/productos.css
+++ b/secciones/productos/productos.css
@@ -16,6 +16,7 @@ header {
   background-color: #bbcdda;
 }
 
+
 /* Slider */
 
 .slider {
@@ -194,10 +195,52 @@ header {
 
 
 
+.carrito{
+  position: fixed;
+  background-color: rgba(240, 248, 255, 0.877);
+  width: 50%;
+  z-index: 999;
+  height: 100vh;
+  margin-left: 100%;
+  top: 0;
+  transition: margin-left 0.3s ease; 
+}
+.carrito h2{
+  margin: 10px;
+  font-family: 'Century gothic', sans-serif;
+  margin-bottom: 25px;
+}
+.table-container{
+  border: 2px solid #325e44;
+  border-radius: 10px; /* Ajusta el valor según tus necesidades */
+  overflow: hidden;
+  margin: 10px;
+}
+.carrito table{ 
+  width: 100%;
+  border-collapse: collapse;
+}
 
-
-
-
+.carrito th, td{
+  border: 1px solid #0000001e;
+  border-radius: 5px; /* Ajusta el valor según tus necesidades */
+  padding: 10px;
+  font-family: 'Century gothic', sans-serif;
+  font-size: 15px;
+}
+.btn-compra{
+  margin-left: 35vw;
+  padding: 5px;
+  width: 100px;
+  color: white;
+  background-color: green;
+  border-radius: 20px;
+  box-shadow: 1px 5px 5px #0000004d;
+  border: none;
+  font-family: 'Century gothic', sans-serif;
+  font-weight: bold;
+  cursor: pointer;
+}
 /* FOOTER */
 
 
